# blooprs

./: 2024-02-03_file_contents_brainstorm.txt  2024-02-03_input_brainstorm.txt  2024-02-03_lua_brainstorm.lua  Cargo.toml  README.md  arp.lua  dedup.lua  indexy.rs  loop.lua  lua_example.lua  mute.lua  trackers.lua
lua/: init.lua
src/: bloop.rs  generic_vec.rs  key_effect.rs  key_tracker.rs  lua_event.rs  lua_stuff.rs  lua_v3_loader.lua  main.rs  midi_in.rs  midi_io.rs  midi_out.rs  optimization_ideas.txt  prelude.lua  trackers.rs
src/lua/: event.rs  mod.rs
src/lua/prelude/: 03_hooks.lua  04_sandbox.lua  mod.rs
