[package]
name = "blooprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eframe = "0.24.1"
env_logger = "0.10.1"
eyre = "0.6.11"
flume = { version = "0.11.0", default-features = false }
itertools = "0.12.0"
log = "0.4.20"
midir = "0.9.1"
midly = "0.5.3"
ncurses = "5.101.0"
parking_lot = "0.12.1"
spin_sleep = "1.1.1"
